<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:background="#F6F1C5"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/group_closeDialog_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_close_icon"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangla_font"
            android:text="@string/congrs"
            android:textAlignment="center"
            android:textColor="#4CAF50"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:fitsSystemWindows="true"
            android:src="@drawable/group_people"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangla_font"
            android:text="@string/facebook_group"
            android:textColor="#1471BC"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bangla_font"
            android:text="@string/group_join_about"
            android:textColor="#131415"
            android:textSize="14sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/group_join_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background_style"
            android:fontFamily="@font/bangla_font"
            android:text="@string/JoinNow"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/group_already_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bangla_font"
            android:text="@string/already_join_group"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>